# nrr-trimetallic-dft

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
data/bader_charge/H2/: H2_final_comparison.csv  median_H2.csv  min_H2.csv
data/bader_charge/N2/: N2_final_comparison.csv  comparison_energy_blength.csv  dopant_charge_diff.csv  medians_N2.csv  merged_df.csv  min_N2.csv
data/bader_charge/orientations/: N2H_charge.csv  N2_horz_charge.csv  N2_vert_charge.csv
data/reaction_paths/: HER_path.csv  df_adsE.csv  multip_path_1_site1.csv  multip_path_1_site2.csv  multip_path_2_site1.csv  multip_path_2_site2.csv  multip_path_3_site1.csv  multip_path_3_site2.csv  path1_s1.csv  path1_s2.csv  path2_s1.csv  path2_s2.csv  path3_s1.csv  path3_s2.csv  raw_df.csv
data/soe/: SOEs_dopant_host.csv  corrected_df_moststable.csv  df_dopant_SOEs_cunisite1.csv  df_dopant_SOEs_cunisite2.csv  df_dopant_SOEs_cunisite3.csv  df_dopant_SOEs_cunisite4.csv  df_dopant_adsE.csv  raw_df_dopant_sites.csv  raw_df_host_sites.csv
notebooks/: 01_bader_charge_n2.ipynb  03_n2_adsorption_descriptors.ipynb  03_n2_adsorption_energy.ipynb  03_reaction_path_analysis.ipynb  04_soe_analysis.ipynb  05_h2_adsorption_energy.ipynb  05_reaction_path_analysis.ipynb  06_final_comparison.ipynb
scripts/: check_vasp_convergence.py  generate_restart_files.py
src/: __init__.py  analysis.py  energetics.py  qe_postprocess.py  thermochemistry.py  visualization.py
tests/: test_analysis.py  test_thermochemistry.py
