[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrr-trimetallic-dft"
version = "1.0.0"
description = "Analysis toolkit for NRR on trimetallic single-doped alloy surfaces (ACS Catalysis 2025)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Parastoo Agharezaei", email = "parezaei@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
notebooks = ["jupyter>=1.0", "ipykernel>=6.0"]

[project.urls]
"Source" = "https://github.com/parezaei/nrr-trimetallic-dft"
"Paper" = "https://doi.org/10.1021/acscatal.5c01049"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
